# bid-review

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run-review.ps1
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/core/: config.yaml
app/: __init__.py  main.py  orchestrator.py
app/llm/: __init__.py  claude_client.py  client_factory.py  opencode_client.py  prompt_store.py
app/llm/prompts/: json_api_wrapper.md  review_main.md  review_second_pass.md  role_detect_multi.md  role_detect_single.md
app/report/: __init__.py  to_docx.py  to_json.py  to_markdown.py
app/review/: __init__.py  claude_review.py
tests/: test_client_factory.py  test_main_parser.py  test_ocr_coverage_guards.py  test_opencode_client.py  test_orchestrator_backend_errors.py
